# ruby-ffi-opencl

./: CMakeLists.txt  README.md  build.sh  ruby_ffi.rb
include/: cl_device.hpp  cl_platform.hpp  cl_sphere.h
src/: cl_device.cpp  cl_platform.cpp  cl_sphere.cpp  program.cpp
test/: main.cpp
